# BE-LexBench

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  analysis_results.md  e2e_pipeline_walkthrough.md  pyproject.toml  release-please-config.json  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: access-request.yml  bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  release-please.yml
data/sample/: README.md  sample.jsonl
docs/: data_access.md  methodology.md  quickstart.md
docs/real_cases/: gwh_022_2025_e2e_walkthrough.md  gwh_022_2025_run_results.md
harness/: __init__.py  judge.py  models.py  run_eval.py  scorers.py  stats.py
schema/: eval_item.schema.json
tests/: test_judge.py  test_models.py  test_run_eval.py  test_scorers.py  test_stats.py
tools/: dev_mock_openai.py
